--- a/app/src/main/res/layout/fragment_welcome_user.xml
+++ b/app/src/main/res/layout/fragment_welcome_user.xml
@@ -14,4 +14,12 @@
         android:gravity="center"
         />
 
+    <TextView
+        android:id="@+id/txtWelcome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:textStyle="bold|italic" />
+
+
 </FrameLayout>
